- modifiy rkward.desktop to always start rkward in a terminal. The backend sometimes behaves strangely, if this is not done.
- use available.packages instead of CRAN.packages (deprecated in R 2.2.0)
- fix installation of standard_plugins.pluginmap
- allow configuration of many R options in Settings->R backend
- updated French translation
- make "up"-button work in R-backend repository settings
- more code cleanups

--- Version 0.3.3 - Oct-06-2005
- honor debug-level setting everywhere
- reworked handling of output from R (no more file-sinks)
- fix display of warning messages (behavior does not match plain R, yet, but is mostly sane)
- option to change list of package repositories
- option to archive downloaded packages
- assorted bugfixes
- provide context/function help for the console
- output-window has been switched to KPart-infrastructure
- command-editor has been switched to KPart-infrastructure completely
- data-editor uses KPart-infrastructure (better integration)
- override standard callbacks used by R for ReadConsole, ShowFiles, EditFile(s), ChooseFile, Suicide, CleanUp. No more reliance on stdin
- some cleanups of dead code
- plugins can now be placed in different menus
- keep list of components/plugins and menu-hierarchy in (few) .pluginmap files instead of parsing directory structure
- improved handling of tcltk windows
- new icon
- decrease default debug level
- don't crash when objects change their type from vector to list/data.frame, etc.
- graph-creation no longer relies on (removable) R objects (can graph after loading a workspace)

--- Version 0.3.2 - Apr-27-2005
- overloaded require works properly with character.only=FALSE
- several API documentation improvement
- hidden objects get shown/hidden according to configuration setting
- settings dialog honors KDE-button order
- R's x11 windows now handle their events (x11-device is now usable)
- fixed bug in the output (no update on empty output)
- paste in the console is properly handled