@@ -34,8 +34,6 @@ Configuration options to add:
 	- RKCommandEditor (first check for reusable functionality)
 		- RKPlugin still uses RKCommandEditor. Convert to use RKCommandEditorWindow instead.
 
-- finish implementing RControlWindow
-
 stuff to do before 0.3.5 release
 - plugins (general)
 	- add import-filter plugins
