@@ -43,17 +43,16 @@ RKConsole::RKConsole (QWidget *parent, const char *name) : KTextEdit (parent, na
 	QFont font ("Courier");
 	setFont (font);
 	
-	setCaption(i18n("R Console"));
+	setCaption (i18n ("R Console"));
 	
-	prefix = "> ";
+	nprefix = "> ";
+	iprefix = "+ ";
+	prefix = nprefix;
 	command_incomplete = false;
 	clear();
-	
-	commandsList.append (new QString(""));
-	
-	commandsList.setAutoDelete( TRUE );
-	
-	connect (this, SIGNAL (userCommandFinished ()), this, SLOT (slotCommandFinished ()));
+
+	commands_history.append (new QString (""));
+	commands_history.setAutoDelete (true);
 
 	RKGlobals::rkApp()->m_manager->addPart (new RKConsolePart (this), false);
 }
@@ -63,10 +62,7 @@ RKConsole::~RKConsole () {
 	RK_TRACE (APP);
 }
 
-
-
-void RKConsole::keyPressEvent ( QKeyEvent * e )
-{
+void RKConsole::keyPressEvent (QKeyEvent *e) {
 	int para=0; int p=0;
 	getCursorPosition (&para, &p);
 	// Explicitely converting so we get less warnings.
@@ -94,107 +90,80 @@ void RKConsole::keyPressEvent ( QKeyEvent * e )
 		cursorAtTheBeginning ();
 		return;
 	}
-	
-	
+
 	if (para<paragraphs () - 1 || pos <= prefix.length () - 1){
 		cursorAtTheEnd ();
 	}
 	
-	KTextEdit::keyPressEvent( e );
+	KTextEdit::keyPressEvent (e);
 }
 
-
-void RKConsole::newLine()
-{
-	append (prefix);
-	cursorAtTheEnd ();
-}
-
-QString RKConsole::currentCommand() 
-{
+QString RKConsole::currentCommand () {
 	QString s = text (paragraphs () - 1).right(paragraphLength (paragraphs () - 1) - prefix.length () + 1);
 	s = s.stripWhiteSpace ();
 	
-	return(s);
+	return (s);
 }
 
-
-void RKConsole::setCurrentCommand(QString command)
-{
+void RKConsole::setCurrentCommand (QString command) {
 	removeParagraph (paragraphs () - 1);
 	append (prefix + command);
 	cursorAtTheEnd ();
 }
 
-
-void RKConsole::cursorAtTheEnd()
-{
+void RKConsole::cursorAtTheEnd () {
 	setCursorPosition (paragraphs () - 1, paragraphLength (paragraphs () - 1));
 }
 
+void RKConsole::submitCommand () {
+	// If we added an item to the list, we delete it here.
+	if (!(commands_history.getLast () == commands_history.current ())){
+		commands_history.removeLast ();
+	}
+	QString c = currentCommand ();
+	commands_history.append (new QString (c.latin1 ()));
+	
+	if (command_incomplete) {
+		c.prepend (incomplete_command + "\n");
+	}
 
-
-void RKConsole::submitCommand()
-{
 	if (!currentCommand ().isEmpty ()) {
-		// If we added an item to the list, we delete it here.
-		if (!(commandsList.getLast () == commandsList.current ())){
-			commandsList.last ();
-			commandsList.remove ();
-		}
-		QString c = currentCommand ();
-		commandsList.append (new QString (c.latin1 ()));
-		
-		if (command_incomplete) {
-			c.prepend (incomplete_command + "\n");
-		}
-
 		RKGlobals::rInterface ()->issueCommand (c, RCommand::User, QString::null, this);
 	} else {
-		command_incomplete = false;
-		newLine ();
+		tryNextInBatch ();
 	}
 }
 
-
-
-void RKConsole::commandsListUp()
-{
-	if (commandsList.getFirst () == commandsList.current ()){
+void RKConsole::commandsListUp () {
+	if (commands_history.getFirst () == commands_history.current ()) {		// already at topmost item
 		return;
 	}
 	// We add the current line to the list.
-	if (commandsList.getLast () == commandsList.current ()) {
-		commandsList.append (new QString(currentCommand ().latin1 ()));
+	if (commands_history.getLast () == commands_history.current ()) {
+		commands_history.append (new QString (currentCommand ().latin1 ()));
 	}
-	commandsList.prev ();
-	QString newString = commandsList.current ()->utf8 ();
-	setCurrentCommand (newString);
+	commands_history.prev ();
+	QString new_string = commands_history.current ()->utf8 ();
+	setCurrentCommand (new_string);
 }
 
-
-
-void RKConsole::commandsListDown()
-{
-	if (commandsList.getLast () == commandsList.current ()){
+void RKConsole::commandsListDown () {
+	if (commands_history.getLast () == commands_history.current ()) {		// already at bottommost item
 		return;
 	}
-	commandsList.next ();
-	QString newString = commandsList.current ()->utf8 ();
+	commands_history.next ();
+	QString newString = commands_history.current ()->utf8 ();
 	setCurrentCommand (newString);
 	
 	// If we are back at the begining of the list, we remove the item we've added.
-	if (commandsList.getLast () == commandsList.current ()){
-		commandsList.remove ();
+	if (commands_history.getLast () == commands_history.current ()){
+		commands_history.remove ();
 	}
 }
 
-
-void RKConsole::cursorAtTheBeginning()
-{
+void RKConsole::cursorAtTheBeginning () {
 	setCursorPosition (paragraphs () - 1, prefix.length ());
 }
-
 
 void RKConsole::rCommandDone (RCommand *command) {
 	if (command->hasOutput ()) {
@@ -207,62 +176,50 @@ void RKConsole::rCommandDone (RCommand *command) {
 	}
 
 	if (command->errorIncomplete ()) {
-		prefix = "+ ";
+		prefix = iprefix;
 		command_incomplete = true;
 		incomplete_command = command->command ();
 	} else {
-		prefix = "> ";
+		prefix = nprefix;
 		command_incomplete = false;
 		incomplete_command = QString::null;
 	}
 
-	newLine ();
-	emit(userCommandFinished());
+	tryNextInBatch ();
 }
 
-
-
-void RKConsole::submitBatch(QString batch)
-{
+void RKConsole::submitBatch (QString batch) {
 	// splitting batch, not allowing empty entries.
 	// TODO: hack something so we can have empty entries.
-	commandsBatch = QStringList::split("\n", batch, false);
-	setCurrentCommand(currentCommand() + commandsBatch.first());
-	if (commandsBatch.count()!=0){
-		submitCommand();
-	}
-	commandsBatch.erase(commandsBatch.begin());
+	commands_batch = QStringList::split ("\n", batch, true);
+	tryNextInBatch ();
 }
 
+void RKConsole::tryNextInBatch () {
+	append (prefix);
+	cursorAtTheEnd ();
 
-void RKConsole::slotCommandFinished()
-{
-	if (!commandsBatch.empty()) {
+	if (!commands_batch.isEmpty()) {
 		// If we were not finished executing a batch of commands, we execute the next one.
-		setCurrentCommand(currentCommand() + commandsBatch.first());
-		commandsBatch.erase(commandsBatch.begin());
-		if (commandsBatch.count()>=1){
-			submitCommand();
+		setCurrentCommand (currentCommand () + commands_batch.first ());
+		commands_batch.pop_front ();
+		if (!commands_batch.isEmpty ()){
+			submitCommand ();
 		}
-		// We would put this here if we would want the last line to be executed
+		// We would put this here if we would want the last line to be executed. We generally don't want this, as there is an empty last item, if there is a newline at the end.
 		//TODO: deal with this kind of situation better.
-		//commandsBatch.erase(commandsBatch.begin());
+		//commands_batch.erase(commands_batch.begin());
 	}
-
 }
 
-
-void RKConsole::paste()
-{
-	QClipboard *cb = QApplication::clipboard();
-	submitBatch (cb->text());
+void RKConsole::paste () {
+	QClipboard *cb = QApplication::clipboard ();
+	submitBatch (cb->text ());
 }
 
-void RKConsole::clear()
-{
-	KTextEdit::clear();
-	newLine();
-	
+void RKConsole::clear () {
+	KTextEdit::clear ();
+	tryNextInBatch ();
 }
 
 ///################### END RKConsole ########################
